<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stellago.stellago.DepositPage">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_alignEnd="@+id/linearLayout2">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:id="@+id/accountNameTextView" />

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:inputType="number"
            android:id="@+id/accountNameEditText"
            android:hint="@string/enter_merchant"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/accountTextView"
            android:layout_weight="0.01" />

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_width="213dp"
            android:layout_height="27dp"
            android:inputType="numberDecimal"
            android:id="@+id/amountEditText"
            android:hint="@string/enter_amount"
            android:enabled="false"
            android:maxLines="1" />

    </LinearLayout>

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_choice_pref"
        android:id="@+id/branchChoicePrefTextView"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_nearby"
        android:id="@+id/nearbyTextView"
        android:layout_alignTop="@+id/nearbyCheckbox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nearbyCheckbox"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/nearbyTextView" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_safest"
        android:id="@+id/safestTextView"
        android:layout_alignTop="@+id/nearbyCheckbox"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/safestCheckbox"
        android:layout_alignTop="@+id/safestTextView"
        android:layout_toEndOf="@+id/safestTextView" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch"
        android:id="@+id/branchTextView"
        android:layout_below="@+id/nearbyTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthForPaymentSpinner"
        android:layout_alignTop="@+id/branchTextView"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_toEndOf="@+id/nearbyTextView" />

    <Button
        style="@style/AppTheme.SubmitButton"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/depositSubmitButton"
        android:layout_below="@+id/monthForPaymentSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        style="@style/AppTheme.Button"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/depositBackButton"
        android:layout_below="@+id/depositSubmitButton"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true" />

</RelativeLayout>
