<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stellago.stellago.OrderChequeBookPage">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/account_id"
            android:id="@+id/accountIDTextView"
            android:layout_weight="0.96" />

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_width="205dp"
            android:layout_height="27dp"
            android:id="@+id/accountIDEditText"
            android:hint="@string/enter_account_id"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/cheque_book_type"
            android:id="@+id/accountTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chequeBookTypeSpinner"
            android:layout_alignBottom="@+id/linearLayout2"
            android:layout_toEndOf="@+id/linearLayout2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_leaves"
            android:id="@+id/noOfLeavesTextView" />

        <EditText
            style="@style/AppTheme.EditText"
            android:layout_width="207dp"
            android:layout_height="27dp"
            android:inputType="number"
            android:id="@+id/noOfLeavesEditText"
            android:hint="@string/enter_number_of_leaves"
            android:singleLine="true" />

    </LinearLayout>

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_choice_pref"
        android:id="@+id/branchChequeBookChoicePrefTextView"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_nearby"
        android:id="@+id/nearbyChequeBookTextView"
        android:layout_alignTop="@+id/nearbyChequeBookCheckbox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nearbyChequeBookCheckbox"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/nearbyChequeBookTextView" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_safest"
        android:id="@+id/safestChequeBookTextView"
        android:layout_alignTop="@+id/nearbyChequeBookCheckbox"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/safestChequeBookCheckbox"
        android:layout_alignTop="@+id/safestChequeBookTextView"
        android:layout_toEndOf="@+id/safestChequeBookTextView" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch"
        android:id="@+id/branchChequeBookTextView"
        android:layout_below="@+id/nearbyChequeBookTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthForPaymentChequeBookSpinner"
        android:layout_alignTop="@+id/branchChequeBookTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/nearbyChequeBookCheckbox" />

    <Button
        style="@style/AppTheme.SubmitButton"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/chequeBookSubmitButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/monthForPaymentChequeBookSpinner"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme.Button"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/chequeBookBackButton"
        android:layout_below="@+id/chequeBookSubmitButton"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true" />

</RelativeLayout>
