<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.billmastervr.BillMasterMain">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cast_album_art_placeholder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:id="@+id/merchantImageView" />

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/add_merchant"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/addMerchant"
        android:layout_below="@+id/merchantImageView"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/view_paid_bills"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/paidThisMonth"
        android:layout_below="@+id/addMerchant"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/view_unpaid_bills"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/unpaidThisMonth"
        android:layout_below="@+id/paidThisMonth"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/view_bills_by_month"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/billByMonths"
        android:layout_below="@+id/unpaidThisMonth"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/back"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/billMasterMainBack"
        android:layout_below="@+id/billByMonths"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
